# Geomagic-Touch-Phantom-omni

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  omni_demo.py
MATLAB/: README.MD  omni_shm_interface.cpp
include/: main.hpp
src/: main.cpp
utils/: omni_shm.py
